NLP TP's/texts/robotics/robotics.stackexchange_0000072249.txt
Q:

TimeSynchronizer compilation error

Hi,
I am trying to implement a simple approximate time synchronizer that synchronizes two topics, Imu data and a twist message from an xbox controller
I have not even departed from the structure of the example here, but I can't for the life of me figure out where my build errors are coming from since it is buried somewhere in a sea of boost warning messages that I can't decrypt.
The node I wrote is below.
#include <ros/ros.h>
#include <geometry_msgs/Twist.h>
#include <sensor_msgs/Imu.h>
#include <sensor_msgs/Joy.h>

#include <message_filters/subscriber.h>
#include <message_filters/time_synchronizer.h>
#include <message_filters/sync_policies/approximate_time.h>

using namespace sensor_msgs;
using namespace geometry_msgs;
using namespace message_filters;

void syncCallback(const sensor_msgs::Imu::ConstPtr& msg, const geometry_msgs::Twist::ConstPtr& vel)
{
    ROS_INFO("HERE WE ARE!"); 
}

int main(int argc, char** argv)
{
    /* initialize ros and create node */ 
    ros::init(argc, argv, "sync_cmd");

    /* create node handle */ 
    ros::NodeHandle nh; 

    /* create filtered subscriber objects for imu and xbox topics */
    message_filters::Subscriber<sensor_msgs::Imu> imu_sub(nh, "/imu/data", 1); 
    message_filters::Subscriber<geometry_msgs::Twist> xbox_sub(nh, "/cmd_vel", 1); 

    typedef message_filters::sync_policies::ApproximateTime<sensor_msgs::Imu, geometry_msgs::Twist> MySyncPolicy;
    // ApproximateTime takes a queue size as its constructor argument, hence MySyncPolicy(10)

    message_filters::Synchronizer<MySyncPolicy> sync(MySyncPolicy(10), imu_sub, xbox_sub);
    sync.registerCallback(boost::bind(&syncCallback, _1, _2)); 

    ros::spin();

    return 0;
}

There are a huge amount of error messages from boost which are really hard for me to make sense of, but the first thing that looked important was the error message below. The full error message can be found at http://pastebin.com/SQdT5VhT
/home/ubuntu/catkin_ws/src/mvp_ros/src/synchronizer.cpp:34:89:   required from here
/opt/ros/indigo/include/message_filters/sync_policies/approximate_time.h:167:89: error: 'value' is not a member of 'ros::message_traits::TimeStamp<geometry_msgs::Twist_<std::allocator<void> >, void>'
     ros::Time msg_time = mt::TimeStamp<typename mpl::at_c<Messages, i>::type>::value(msg);
                                                                                         ^
/opt/ros/indigo/include/message_filters/sync_policies/approximate_time.h:177:99: error: 'value' is not a member of 'ros::message_traits::TimeStamp<geometry_msgs::Twist_<std::allocator<void> >, void>'
       previous_msg_time = mt::TimeStamp<typename mpl::at_c<Messages, i>::type>::value(previous_msg);
                                                                                                   ^
/opt/ros/indigo/include/message_filters/sync_policies/approximate_time.h:183:100: error: 'value' is not a member of 'ros::message_traits::TimeStamp<geometry_msgs::Twist_<std::allocator<void> >, void>'
       previous_msg_time =  mt::TimeStamp<typename mpl::at_c<Messages, i>::type>::value(previous_msg);
                                                                                                ^

EDIT1:
Ughh ok I thought the suggestion from @ahendrix would work, but now I'm hitting another error that is even more cryptic.....
CMakeFiles/synchronizer.dir/src/synchronizer.cpp.o: In function `message_filters::Synchronizer<message_filters::sync_policies::ApproximateTime<sensor_msgs::Imu_<std::allocator<void> >, geometry_msgs::TwistStamped_<std::allocator<void> >, message_filters::NullType, message_filters::NullType, message_filters::NullType, message_filters::NullType, message_filters::NullType, message_filters::NullType, message_filters::NullType> >::disconnectAll()':
synchronizer.cpp:(.text._ZN15message_filters12SynchronizerINS_13sync_policies15ApproximateTimeIN11sensor_msgs4Imu_ISaIvEEEN13geometry_msgs13TwistStamped_IS5_EENS_8NullTypeESA_SA_SA_SA_SA_SA_EEE13disconnectAllEv[_ZN15message_filters12SynchronizerINS_13sync_policies15ApproximateTimeIN11sensor_msgs4Imu_ISaIvEEEN13geometry_msgs13TwistStamped_IS5_EENS_8NullTypeESA_SA_SA_SA_SA_SA_EEE13disconnectAllEv]+0x24): undefined reference to `message_filters::Connection::disconnect()'

The key error here seems to be the undefined reference to message_filters::Connection::Connection(boost::function<void ()> const&). I feel terrible just posting error codes and asking or help...in addition to helping me solve this, could someone also provide some insight into how I can be more self sufficient in diagnosing these boost library errors? I can't find any info in the wiki or in the api :(
[SOLVED]EDIT2
It turns out that the error in EDIT1 had nothing to do with my original problem, which was remedied by @ahendrix. But two things now arose once the original build error was fixed, both of which were not relevant to the original error. For sake of completeness I will address them here.

Don't forget to add message_filters to your project config files as shown here.
All references to geometry_msgs/Twist need to be updated to reflect the new type geometry_msgs/TwistStamped. For example, I had to go in and change vel_.angular.z to vel_.twist.angular.z to match the new message definition.

Thanks x1000,
Brett

Originally posted by bigbrett on ROS Answers with karma: 58 on 2016-02-22
Post score: 1

A:

Twist messages don't have a header, which normally contains the timestamp used by the synchronizers.
I think this error message is trying to tell you that you can't use a Twist with a synchronizer.

Originally posted by ahendrix with karma: 47576 on 2016-02-22
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by bigbrett on 2016-02-22:
thanks for the response. Looks like I'll need to define a custom message type then (which is allowed I believe?)
Comment by ahendrix on 2016-02-22:
There is a TwistStamped which is a Twist message with a header. I would recommend that instead of defining your own message.
Comment by bigbrett on 2016-02-23:
arghh that answer makes perfect sense now, so I marked this as solved, but then upon implementing it, I am now getting another even more cryptic error (see the edit in my OP). Any ideas?
Comment by bigbrett on 2016-02-23:
solved, your suggestion was indeed the correct answer, and I was just inappropriately handling the geometry_msgs/TwistStamped type. Will edit OP. Thanks much!
Comment by aids293 on 2016-02-24:
Hello,i just want to use TimeSynchronizer,do i need install boost?Bescause when i include these headers and compile code,it seems to show boost error.Thank you.
Comment by ahendrix on 2016-02-24:
@aids293: if you have the topic_tools package installed, it should install the libraries you need too. Please ask a new question and include your source code and the full error message.
Comment by aids293 on 2016-02-26:
Ok ,thank you

